--- a/Twitter.css
+++ b/Twitter.css
@@ -377,3 +377,7 @@ div.css-1dbjc4n.r-1udh08x.r-1sp51qo {
     padding-right: 2;
 }
 
+#react-root > div > div > div > main > div > div.css-1dbjc4n.r-aqfbo4.r-1niwhzg.r-16y2uox > div > div.css-1dbjc4n.r-14lw9ot.r-1tlfku8.r-1ljd8xs.r-13l2t4g.r-1phboty.r-1jgb5lz.r-1ye8kvj.r-13qz1uu.r-184en5c > div > div > div:nth-child(2) > section > div > div > div > div:nth-child(4) > div > div > div > div.css-1dbjc4n.r-1iusvr4.r-46vdb2.r-1777fci.r-5f2r5o.r-bcqeeo > div.css-1dbjc4n.r-1awozwy.r-18u37iz.r-1wtj0ep > div.css-1dbjc4n.r-k200y.r-1n0xq6e > div > div > span {
+    background: transparent;
+}
+
